# ORIGIN

./: .gitattributes  .gitignore  CONTRIBUTING.md  COST_ESTIMATE_10K_PILOT.md  GITHUB_SETUP.md  LICENSE  Makefile  PRODUCTION_FIXES.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_IMPROVEMENTS.md  README.md  SECURITY_ASSERTIONS.md  SECURITY_FIXES.md  clean.bat  docker-compose.test.yml  docker-compose.yml  env.example  evidence.html  evidence.json  logs.bat  migrate.bat  seed.bat  setup.ps1  test.bat  up.bat
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_api_key_prefix_digest.py  002_add_ledger_tenant_sequence.py  003_add_certificate_key_fields.py  004_add_upload_decision_inputs.py  005_add_evidence_storage_fields.py  006_webhook_encrypted_secrets.py  007_add_policy_model_versions.py  b9d844b89806_add_decision_mode_to_policy_profiles.py  d5526dedf344_initial_migration.py  (+5 more)
apps/api/origin_api/: __init__.py  celery_client.py  cli.py  main.py  settings.py
apps/api/tests/: conftest.py  test_api_key_lookup.py  test_auth_performance.py  test_certificate_algorithm.py  test_certificate_verification.py  test_evidence_503.py  test_evidence_503_broker.py  test_evidence_generation.py  test_evidence_integrity.py  test_evidence_production.py  test_evidence_routes.py  test_evidence_schema.py  test_evidence_scopes.py  test_evidence_task_fields.py  test_health.py  test_identity_resolver.py  test_ingest.py  test_ip_allowlist.py  test_kms_signer.py  test_ledger_verification.py  test_ml_inference.py  test_policy_engine.py  test_scope_enforcement.py  test_tenant_isolation.py  test_webhook_raw_body.py  test_webhook_security.py
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/origin_worker/: __init__.py  celery_app.py  db.py  settings.py  tasks.py
(+60 files in other folders)
