[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-worker"
version = "0.1.0"
description = "ORIGIN Celery Worker"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.29.0",
    "minio>=7.2.0",
    "reportlab>=4.0.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

